--- a/elements.html
+++ b/elements.html
@@ -54,7 +54,43 @@
     // console.log(btn)
 
     console.log(buttons)
+      
+      let k=1;
+      for(i=1; i<=5; i++)
+        {
+            for(j=1; j <= i;j++)
+                {
+                document.write(k)
+                    k++;
+                }
+             document.write("<br>")
+        }
+             document.write("<br>")
 
+k=1;
+      for(i=1; i<=5; i++)
+        {
+            for(j=1; j <= i;j++)
+                {
+                    if(j%2==0)
+                        document.write('#')
+                    else
+                        document.write('@')
+                }
+             document.write("<br>")
+        }
+             document.write("<br>")
+      
+      k=15;
+      for(i=5; i>=1; i--)
+        {
+            for(j=1; j <= i;j++)
+                {
+                document.write(k)
+                    k--;
+                }
+             document.write("<br>")
+        }
 
 
     //Events: onclick, onmouseover.....
