--- a/strings.html
+++ b/strings.html
@@ -34,7 +34,7 @@
 
     //  g - global, i - case insensitivity
 
-    // console.log(para.replace(/a/g, "A"))
+     console.log(para.replace(/a/g, "A"))
 
 
     // console.log(para.replace(/p/gi, "q"))
@@ -65,8 +65,11 @@
 
     //Array functions: push, pop, shift, unshift, splice, slice, includes, indexOf, lastIndexOf, sort
 
-
-
+      const arr = ['item1', 'item2', 'item3'];
+      arr.push('item4','item5');
+      console.log(arr);
+      arr.pop();
+      console.log(arr);
 
   </script>
 </body>
