--- a/traversing.html
+++ b/traversing.html
@@ -1,92 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Traversing</title>
-  <style>
-    a {
-      display: none;
-    }
-
-    #wrapper {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .box {
-      width: 31%;
-      margin: 1%;
-    }
-
-    .box .heading h1 {
-      display: flex;
-      justify-content: space-between;
-    }
-
-    .box .heading h1 span {
-      cursor: pointer;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Traversing</title>
+<style>
+a {
+    display: none;
+}
+#wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.box {
+    width: 31%;
+    margin: 1%;
+}
+.box .heading h1 {
+    display: flex;
+    justify-content: space-between;
+}
+.box .heading h1 span {
+    cursor: pointer;
+}
+</style>
 </head>
 
 <body>
-  <div id="wrapper">
-    <div class="box">
-      <div class="heading">
-        <h1>
-          Box 1
-          <span>+</span>
-        </h1>
-      </div>
-      <div class="content">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non rerum sunt facilis eius unde repellat, laborum
-          tempore natus modi enim in repellendus aliquam. Saepe dolor consequuntur laudantium minus ab eos?
-          Quod aperiam maiores inventore, corrupti voluptate natus impedit ut nobis quasi rerum ipsum accusamus
-          cupiditate animi exercitationem, tempora libero. Aliquid ducimus saepe ut incidunt similique repudiandae modi
-          dolor voluptatum vitae?</p>
-      </div>
-      <a href="">SHOW</a>
+<div id="wrapper">
+  <div class="box">
+    <div class="heading">
+      <h1> Box 1 <span>+</span> </h1>
     </div>
-
-    <div class="box">
-      <div class="heading">
-        <h1>
-          Box 2
-          <span>+</span>
-        </h1>
-      </div>
-      <div class="content">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non rerum sunt facilis eius unde repellat, laborum
-          tempore natus modi enim in repellendus aliquam. Saepe dolor consequuntur laudantium minus ab eos?
-          Quod aperiam maiores inventore, corrupti voluptate natus impedit ut nobis quasi rerum ipsum accusamus
-          cupiditate animi exercitationem, tempora libero. Aliquid ducimus saepe ut incidunt similique repudiandae modi
-          dolor voluptatum vitae?</p>
-      </div>
-      <a href="">SHOW</a>
+    <div class="content">
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non rerum sunt facilis eius unde repellat, laborum
+        tempore natus modi enim in repellendus aliquam. Saepe dolor consequuntur laudantium minus ab eos?
+        Quod aperiam maiores inventore, corrupti voluptate natus impedit ut nobis quasi rerum ipsum accusamus
+        cupiditate animi exercitationem, tempora libero. Aliquid ducimus saepe ut incidunt similique repudiandae modi
+        dolor voluptatum vitae?</p>
     </div>
-
-    <div class="box">
-      <div class="heading">
-        <h1>
-          Box 3
-          <span>+</span>
-        </h1>
-      </div>
-      <div class="content">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non rerum sunt facilis eius unde repellat, laborum
-          tempore natus modi enim in repellendus aliquam. Saepe dolor consequuntur laudantium minus ab eos?
-          Quod aperiam maiores inventore, corrupti voluptate natus impedit ut nobis quasi rerum ipsum accusamus
-          cupiditate animi exercitationem, tempora libero. Aliquid ducimus saepe ut incidunt similique repudiandae modi
-          dolor voluptatum vitae?</p>
-      </div>
-      <a href="">SHOW</a>
+    <a href="">SHOW</a> </div>
+  <div class="box">
+    <div class="heading">
+      <h1> Box 2 <span>+</span> </h1>
     </div>
-  </div>
-  <script>
+    <div class="content">
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non rerum sunt facilis eius unde repellat, laborum
+        tempore natus modi enim in repellendus aliquam. Saepe dolor consequuntur laudantium minus ab eos?
+        Quod aperiam maiores inventore, corrupti voluptate natus impedit ut nobis quasi rerum ipsum accusamus
+        cupiditate animi exercitationem, tempora libero. Aliquid ducimus saepe ut incidunt similique repudiandae modi
+        dolor voluptatum vitae?</p>
+    </div>
+    <a href="">SHOW</a> </div>
+  <div class="box">
+    <div class="heading">
+      <h1> Box 3 <span>+</span> </h1>
+    </div>
+    <div class="content">
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non rerum sunt facilis eius unde repellat, laborum
+        tempore natus modi enim in repellendus aliquam. Saepe dolor consequuntur laudantium minus ab eos?
+        Quod aperiam maiores inventore, corrupti voluptate natus impedit ut nobis quasi rerum ipsum accusamus
+        cupiditate animi exercitationem, tempora libero. Aliquid ducimus saepe ut incidunt similique repudiandae modi
+        dolor voluptatum vitae?</p>
+    </div>
+    <a href="">SHOW</a> </div>
+</div>
+<script>
     // Traversing: moving up or down in the DOM is called traversing
 
     //parentElement, nextElementSibling, previousElementSibling, children
@@ -141,5 +122,4 @@
 
   </script>
 </body>
-
 </html>
