--- a/todolist/index.html
+++ b/todolist/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To Do List</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>To Do List</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="wrapper">
-    <div class="todolist">
-      <div class="top">
-        <h2>ToDo List</h2>
-        <form action="">
-          <input type="text" placeholder="Enter your task" required>
-          <button type="submit">Add</button>
-        </form>
-      </div>
-      <div class="bottom">
-        <ul></ul>
-      </div>
+<div id="wrapper">
+  <div class="todolist">
+    <div class="top">
+      <h2>ToDo List</h2>
+      <form action="">
+        <input type="text" placeholder="Enter your task" required>
+        <button type="submit">Add</button>
+      </form>
+    </div>
+    <div class="bottom">
+      <ul>
+      </ul>
     </div>
   </div>
-  <script src="todolist.js" type="module"></script>
+</div>
+<script src="todolist.js" type="module"></script>
 </body>
 </html>
 <script>
@@ -39,6 +40,8 @@
     if(toDo.getAttribute('rel') !==null){
       let idVal=toDo.getAttribute('rel')
       document.getElementById(idVal).innerHTML=inputValue
+      toDo.value='';
+        toDo.removeAttribute('rel')
     }
     else
     {
@@ -97,9 +100,14 @@
   }
 
 </script>
+
 <style>
-  a{cursor: pointer;font-size: 20px;margin-right: 20px;}
-  .strikediag {
-  background: linear-gradient(to left top, transparent 47.75%, currentColor 49.5%, currentColor 50.5%, transparent 52.25%);
+a {
+    cursor: pointer;
+    font-size: 20px;
+    margin-right: 20px;
+}
+.strikediag {
+    background: linear-gradient(to left top, transparent 47.75%, currentColor 49.5%, currentColor 50.5%, transparent 52.25%);
 }
 </style>
