--- a/todolist/index.html
+++ b/todolist/index.html
@@ -108,6 +108,6 @@ a {
     margin-right: 20px;
 }
 .strikediag {
-    background: linear-gradient(to left top, transparent 47.75%, currentColor 49.5%, currentColor 50.5%, transparent 52.25%);
+    background: linear-gradient(transparent 47.75%, currentColor 49.5%, currentColor 50.5%, transparent 52.25%);
 }
 </style>
