--- a/formValidation.html
+++ b/formValidation.html
@@ -119,9 +119,7 @@
       }
       else {
         elem.nextElementSibling.innerHTML = msg
-          if(checkValidation ===true)
-              {elem.focus()}
-            
+        //elem.focus()
         return false;
       }
     }
