--- a/asynchronousProgramming/fetch.html
+++ b/asynchronousProgramming/fetch.html
@@ -13,9 +13,10 @@
       box-sizing: border-box;
     }
 
-    #wrapper{
+    #wrapper {
       margin: 2rem;
     }
+
     .dataParent {
       margin: 1rem 0;
       border-bottom: 1px solid #c2c2c2;
@@ -29,50 +30,82 @@
 
   </div>
   <script>
-    // const response = fetch('https://randomuser.me/api/')
-    // console.log(response)
+
+    // fetch('https://dummyjson.com/products')
+    // .then((response) => {
+    //   console.log(response);
+    //   return response.json()
+    // })
+    // .then((result) => {
+    //   console.log(result)
+    // })
+    // .catch((err) => {console.log(err)})
 
 
-    // fetch('https://jsonplaceholder.typicode.com/todos')
-    // .then((resposnse) => {return resposnse.json()})
-    // .then((result) => {console.log(result); showData(result)})
-    // .catch((error) => {console.log(error)})
 
+    //async / await
 
-    // function showData(res){
-
+    // async function fetchData(){
+    //   const response = await fetch('https://dummyjson.com/products')
+    //   const result = await response.json()
+    //   console.log(result)
     // }
 
-    // async / await
+    // fetchData()
 
-    async function fetchData() {
-      const response = await fetch('https://jsonplaceholder.typicode.com/todos')
-      const result = await response.json()
-      console.log(result)
-      showData(result)
+
+
+    //Creating a Promise
+
+    function doSomething(a, b) {
+      return a + b
     }
-    fetchData()
 
-    function showData(res) {
-      res.forEach((row) => {
-
-        const div = document.createElement("div")
-        div.classList.add("dataParent")
-
-        const idPara = document.createElement("p")
-        idPara.innerHTML = "<strong>ID: </strong>" + row.id
-
-        const titlePara = document.createElement("p")
-        titlePara.innerHTML = "<strong>Text: </strong>" + row.title
-
-        div.appendChild(idPara)
-        div.appendChild(titlePara)
-
-        document.querySelector("#wrapper").appendChild(div)
+    function prom() {
+      return new Promise((resolve, reject) => {
+        const sum = doSomething(2, 3)
+        if (sum) resolve(sum)
+        else {
+          const er = new Error()
+          reject(er)
+        }
       })
     }
 
-    //Promise.all
+
+    // prom()
+    //   .then((response) => { console.log(response) })
+    //   .catch((err) => { console.log(err) })
+
+
+
+    //All these accept array of promises
+    
+    //Promise.any: 
+    //Promise.all: 
+    //Promise.race: 
+    //Promise.allSettled
+
+
+
+
+    // const p1 = Promise.resolve(3);
+    // const p2 = 1337;
+    // const p3 = new Promise((resolve, reject) => {
+    //   setTimeout(() => {
+    //     resolve("foo");
+    //   }, 100);
+    // });
+
+    // Promise.all([p1, p2, p3]).then((values) => {
+    //   console.log(values); // [3, 1337, "foo"]
+    // });
+
+
+
+
+    
+
 
 
 
